...
                        ),
                      ),

                      onPressed: isLoading ? null : saveNote,

                      child: const Text(
                        "Save Note",
                        style: TextStyle(fontSize: 16),
                      ),
                    ),
                  ),

                ],
...
