...

          /// reload notes หลังเพิ่ม
          context.read<NoteBloc>().add(LoadNotesEvent());
        },

        icon: const Icon(Icons.add),
        label: const Text("Add Note"),
      ),

      body: BlocBuilder<NoteBloc, NoteState>(

        builder: (context, state) {

...
